--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+EditorStartupMap=/Game/ThirdPerson/Lvl_Arena.Lvl_Arena
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -22,8 +22,14 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+GameDefaultMap=/Game/ThirdPerson/Lvl_Arena.Lvl_Arena
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
+
+[/Script/Engine.RendererSettings]
+r.AllowStaticLighting=True
+r.SupportStationarySkylight=True
+r.SupportLowQualityLightmaps=True
+r.SupportPointLightWholeSceneShadows=True
 
