--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -15,6 +15,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Data.Heal",DevComment="")
 +GameplayTagList=(Tag="Event.Abilities.Changed",DevComment="")
 +GameplayTagList=(Tag="GameplayAbility.Movement.Dash",DevComment="")
++GameplayTagList=(Tag="GameplayAbility.Water.WaterGun",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Movement.Dash",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Water.WaterGun",DevComment="")
 +GameplayTagList=(Tag="Status.Mana.Regen",DevComment="")
 
