--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,9 +14,12 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Data.Damage",DevComment="")
 +GameplayTagList=(Tag="Data.Heal",DevComment="")
 +GameplayTagList=(Tag="Event.Abilities.Changed",DevComment="")
++GameplayTagList=(Tag="Event.Weapon.Equip",DevComment="")
++GameplayTagList=(Tag="GameplayAbility.Melee.Sword.Attack",DevComment="")
 +GameplayTagList=(Tag="GameplayAbility.Movement.Dash",DevComment="")
 +GameplayTagList=(Tag="GameplayAbility.Water.WaterGun",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Movement.Dash",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Water.WaterGun",DevComment="")
 +GameplayTagList=(Tag="Status.Mana.Regen",DevComment="")
++GameplayTagList=(Tag="Weapon.Melee.Sword",DevComment="")
 
