--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -11,9 +12,11 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Cooldown.Dash",DevComment="")
++GameplayTagList=(Tag="Cooldown.WaterGun",DevComment="")
 +GameplayTagList=(Tag="Data.Damage",DevComment="")
 +GameplayTagList=(Tag="Data.Heal",DevComment="")
 +GameplayTagList=(Tag="Event.Abilities.Changed",DevComment="")
++GameplayTagList=(Tag="Event.Abilities.MaxExceeded",DevComment="")
 +GameplayTagList=(Tag="Event.Weapon.Equip",DevComment="")
 +GameplayTagList=(Tag="GameplayAbility.Melee.Sword.Attack",DevComment="")
 +GameplayTagList=(Tag="GameplayAbility.Movement.Dash",DevComment="")
