--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -32,6 +32,7 @@ r.AllowStaticLighting=True
 r.SupportStationarySkylight=True
 r.SupportLowQualityLightmaps=True
 r.SupportPointLightWholeSceneShadows=True
+r.GenerateMeshDistanceFields=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_Default
