--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,5 +1,4 @@
 ;METADATA=(Diff=true, UseCommands=true)
-
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -11,6 +10,7 @@ bDynamicReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Character.Enemy",DevComment="")
 +GameplayTagList=(Tag="Cooldown.Attack.Melee.Sword",DevComment="")
 +GameplayTagList=(Tag="Cooldown.Dash",DevComment="")
 +GameplayTagList=(Tag="Cooldown.WaterGun",DevComment="")
