added mana restore area

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -16,6 +16,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Cooldown.WaterGun",DevComment="")
 +GameplayTagList=(Tag="Data.Damage",DevComment="")
 +GameplayTagList=(Tag="Data.Heal",DevComment="")
++GameplayTagList=(Tag="Data.Mana.Restore",DevComment="")
 +GameplayTagList=(Tag="Event.Abilities.Changed",DevComment="")
 +GameplayTagList=(Tag="Event.Abilities.MaxExceeded",DevComment="")
 +GameplayTagList=(Tag="Event.Weapon.Equip",DevComment="")
