framework for aoe

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -22,6 +22,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Event.Weapon.Equip",DevComment="")
 +GameplayTagList=(Tag="GameplayAbility.Melee.Sword.Attack",DevComment="")
 +GameplayTagList=(Tag="GameplayAbility.Movement.Dash",DevComment="")
++GameplayTagList=(Tag="GameplayAbility.Water.Blast",DevComment="")
 +GameplayTagList=(Tag="GameplayAbility.Water.WaterGun",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Attack.Melee.Sword",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Movement.Dash",DevComment="")
