blast demo finished

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -26,6 +26,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayAbility.Water.WaterGun",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Attack.Melee.Sword",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Movement.Dash",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Water.Blast",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Water.WaterGun",DevComment="")
 +GameplayTagList=(Tag="Status.Mana.Regen",DevComment="")
 +GameplayTagList=(Tag="Weapon.Melee.Sword",DevComment="")
