fixed blast collision

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -12,6 +12,7 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Character.Enemy",DevComment="")
 +GameplayTagList=(Tag="Cooldown.Attack.Melee.Sword",DevComment="")
++GameplayTagList=(Tag="Cooldown.Blast",DevComment="")
 +GameplayTagList=(Tag="Cooldown.Dash",DevComment="")
 +GameplayTagList=(Tag="Cooldown.WaterGun",DevComment="")
 +GameplayTagList=(Tag="Data.Damage",DevComment="")
