--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,6 +14,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Cooldown.Attack.Melee.Sword",DevComment="")
 +GameplayTagList=(Tag="Cooldown.Blast",DevComment="")
 +GameplayTagList=(Tag="Cooldown.Dash",DevComment="")
++GameplayTagList=(Tag="Cooldown.Pulse",DevComment="")
 +GameplayTagList=(Tag="Cooldown.WaterGun",DevComment="")
 +GameplayTagList=(Tag="Data.Damage",DevComment="")
 +GameplayTagList=(Tag="Data.Heal",DevComment="")
@@ -24,10 +25,12 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayAbility.Melee.Sword.Attack",DevComment="")
 +GameplayTagList=(Tag="GameplayAbility.Movement.Dash",DevComment="")
 +GameplayTagList=(Tag="GameplayAbility.Water.Blast",DevComment="")
++GameplayTagList=(Tag="GameplayAbility.Water.Pulse",DevComment="")
 +GameplayTagList=(Tag="GameplayAbility.Water.WaterGun",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Attack.Melee.Sword",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Movement.Dash",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Water.Blast",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Water.Pulse",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Water.WaterGun",DevComment="")
 +GameplayTagList=(Tag="Status.Mana.Regen",DevComment="")
 +GameplayTagList=(Tag="Weapon.Melee.Sword",DevComment="")
